[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "File_handler"
version = "1.0.0"
description = """A personal Python utility library"""
authors = [
    { name="Andrea Siotto", email="siotto.andrea@temple.edu" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "openpyxl"
]

[project.urls]
Homepage = "https://github.com/yourusername/File_handler"
